<resources>
    <string name="app_name">Know Your Government</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="website">Website:</string>
    <string name="know_your_government">Know Your Government</string>
    <string name="powered_by">Powered by</string>
    <string name="google_civic_information_api">
        <a href="https://developers.google.com/civic-information/">Google Civic\nInformation API</a>
    </string>
    <string name="_2020_david_basaraba">© 2020, David Basaraba</string>
    <string name="version_1_0">Version 1.0</string>
</resources>