<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OfficialActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/scrollableConstraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include
                    android:id="@+id/toolbar"
                    layout="@layout/toolbar" />

                <TextView
                    android:id="@+id/currentLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                    app:layout_constraintEnd_toEndOf="@+id/toolbar"
                    app:layout_constraintStart_toStartOf="@+id/toolbar"
                    app:layout_constraintTop_toTopOf="@+id/toolbar" />

                <TextView
                    android:id="@+id/office"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="#FFFFFF"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="23dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.501"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/office" />

                <TextView
                    android:id="@+id/party"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="#FFFFFF"
                    android:textSize="19dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website"
                    android:textColor="#FFFFFF"
                    android:textSize="19dp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/website"
                    app:layout_constraintStart_toStartOf="@+id/textView8" />

                <TextView
                    android:id="@+id/website"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textAlignment="textStart"
                    android:textColor="#FFFFFF"
                    android:textSize="19dp"
                    app:layout_constraintEnd_toEndOf="@+id/email"
                    app:layout_constraintStart_toStartOf="@+id/email"
                    app:layout_constraintTop_toBottomOf="@+id/email" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textAlignment="textStart"
                    android:textColor="#FFFFFF"
                    android:textSize="19dp"
                    app:layout_constraintEnd_toEndOf="@+id/phone"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/phone"
                    app:layout_constraintTop_toBottomOf="@+id/phone" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="#FFFFFF"
                    android:textSize="19dp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/phone"
                    app:layout_constraintStart_toStartOf="@+id/textView4" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:textAlignment="textStart"
                    android:textColor="#FFFFFF"
                    android:textSize="19dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/avatar" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/address"
                    android:textColor="#FFFFFF"
                    android:textSize="19dp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/address"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textAlignment="textStart"
                    android:textColor="#FFFFFF"
                    android:textSize="19dp"
                    app:layout_constraintEnd_toEndOf="@+id/address"
                    app:layout_constraintStart_toStartOf="@+id/address"
                    app:layout_constraintTop_toBottomOf="@+id/address" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="#FFFFFF"
                    android:textSize="19dp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/email"
                    app:layout_constraintStart_toStartOf="@+id/textView6" />

                <ImageView
                    android:id="@+id/facebook"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:onClick="onFacebook"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/website"
                    app:srcCompat="@drawable/facebook" />

                <ImageView
                    android:id="@+id/twitter"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="24dp"
                    android:onClick="onTwitter"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="@+id/facebook"
                    app:layout_constraintStart_toEndOf="@+id/facebook"
                    app:layout_constraintTop_toTopOf="@+id/facebook"
                    app:srcCompat="@drawable/twitter" />

                <ImageView
                    android:id="@+id/youtube"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="24dp"
                    android:onClick="onYouTube"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="@+id/twitter"
                    app:layout_constraintStart_toEndOf="@+id/twitter"
                    app:layout_constraintTop_toTopOf="@+id/twitter"
                    app:srcCompat="@drawable/youtube" />

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onClick="onAvatar"
                    android:scaleType="fitCenter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/party"
                    app:srcCompat="@drawable/missing" />

                <ImageView
                    android:id="@+id/partyLogo"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginTop="200dp"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="@+id/avatar"
                    app:layout_constraintEnd_toEndOf="@+id/avatar"
                    app:layout_constraintStart_toStartOf="@+id/avatar"
                    app:layout_constraintTop_toTopOf="@+id/avatar" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>